update PSO