@@ -9,40 +9,33 @@ import java.util.Map;
 import models.Point;
 
 public class Particle {
+	private Swarm swarm;
 	private Point[] maze;
 	private Map<Point, Integer> historyPath;
 	private List<Point> path;
 	private Vector position;
 	private Vector velocity;
 	private Vector pBest;
-	private Vector gBest;
 	private FitnessDetails fitness;
-	private int dimension;
 
-	public Particle(Point[] maze, int dimension) {
-
+	public Particle(Point[] maze, int dimension, Swarm swarm) {
+		this.swarm = swarm;
 		historyPath = new HashMap<>();
 		this.maze = maze;
-		this.dimension = dimension;
 		fitness = new FitnessDetails(maze);
 		position = new Vector(dimension);
 		position.setValue(objective(MazeConfig.ENTRANCE));
 		pBest = new Vector(position);
-		velocity = new Vector(new double[] { PSOConfig.RANDOM.nextDouble(-2, 2), PSOConfig.RANDOM.nextDouble(-2, 2) });
+		velocity = new Vector(new double[] { PSOConfig.RANDOM.nextDouble(-3, 3), PSOConfig.RANDOM.nextDouble(-3, 3) });
 		path = new ArrayList<Point>();
 		path.add(MazeConfig.ENTRANCE);
 	}
 
-	public void update(int dimension) {
-		updateVel(dimension);
-
+	public void update(int dimension, Vector gBest) {
+		updateVel(dimension, gBest);
 		updatePos(dimension);
 		updatePBest(position);
 
-	}
-
-	public void updateGBest(Vector toUpdate) {
-		gBest = toUpdate;
 	}
 
 	private int objective(Point p) {
@@ -52,15 +45,18 @@ public class Particle {
 	public void updatePBest(Vector v) {
 		if (v.getValue() < pBest.getValue()) {
 			pBest = new Vector(v);
+			if (pBest.getValue() < swarm.getGBest().getValue()) {
+				swarm.updateGBest(pBest, this);
+			}
 		}
 	}
 
-	private void updateVel(int dimension) {
+	private void updateVel(int dimension, Vector gBest) {
 		double inertia = velocity.getDimensionValue(dimension) * PSOConfig.INERTIA_WEIGHT;
 		double cognitive = (pBest.getDimensionValue(dimension) - position.getDimensionValue(dimension))
-				* (PSOConfig.RANDOM.nextDouble() * PSOConfig.COGNITIVE_COEFFICIENT);
+				* (PSOConfig.RANDOM.nextDouble(0, 1) * PSOConfig.COGNITIVE_COEFFICIENT);
 		double social = (gBest.getDimensionValue(dimension) - position.getDimensionValue(dimension))
-				* (PSOConfig.RANDOM.nextDouble() * PSOConfig.SOCIAL_COEFFICIENT);
+				* (PSOConfig.RANDOM.nextDouble(0, 1) * PSOConfig.SOCIAL_COEFFICIENT);
 		velocity.setDimensionValue(dimension, inertia + cognitive + social);
 
 	}
@@ -75,7 +71,6 @@ public class Particle {
 	private void updatePos(int dimension) {
 		position.setDimensionValue(dimension,
 				position.getDimensionValue(dimension) + velocity.getDimensionValue(dimension));
-
 		Point tmp = new Point(path.getLast().getX(), path.getLast().getY());
 		int step = nextStep(sigmoid(position, dimension));
 		step(tmp, step, dimension);
@@ -83,20 +78,32 @@ public class Particle {
 		if (path.size() != 1)
 			prev = path.get(path.size() - 2);
 		boolean contains = false;
-		if (historyPath.get(tmp) != null) {
-			historyPath.put(tmp, historyPath.get(tmp) + 1);
+		Integer times = historyPath.get(tmp);
+		if (times != null) {
+			historyPath.put(tmp, times + 1);
 			if (prev != null)
 				adjustVelocity(tmp, prev, dimension);
 			velocity.setDimensionValue(dimension, velocity.getDimensionValue(dimension) * 0.8);
 			contains = true;
+			if (times > 4) {
+				// Tìm vị trí mới chưa từng ghé thăm hoặc ghé thăm dưới 4 lần
+				tmp = findAlternativePoint(path.getLast());
+				if (tmp == null) {
+					// Nếu không tìm được điểm phù hợp, random lại velocity để thoát khỏi bẫy
+					resetVelocity(dimension);
+					return;
+				}
+			}
 		}
-
+		times = historyPath.get(tmp);
+		contains = times != null;
 		if (isValid(tmp)) {
 			if (!contains) {
 				position.setValue(objective(tmp) - 1);
 				historyPath.put(tmp, 1);
-			} else
-				position.setValue(objective(tmp) + historyPath.get(tmp) + 5);
+			} else {
+				position.setValue(objective(tmp) + times + 5);
+			}
 			path.add(tmp);
 		} else {
 			if (path.size() != 1) {
@@ -111,6 +118,29 @@ public class Particle {
 		}
 		limitPos(dimension);
 		limitVelocity(dimension);
+	}
+
+	private void resetVelocity(int dimension) {
+		velocity = new Vector(new double[] { PSOConfig.RANDOM.nextDouble(-3, 3), PSOConfig.RANDOM.nextDouble(-3, 3) });
+		position.setDimensionValue(dimension,
+				position.getDimensionValue(dimension) + velocity.getDimensionValue(dimension));
+	}
+
+	private Point findAlternativePoint(Point current) {
+		for (int dx = -1; dx <= 1; dx++) {
+			for (int dy = -1; dy <= 1; dy++) {
+				if (dx == 0 && dy == 0)
+					continue; // Bỏ qua chính nó
+				Point candidate = new Point(current.getX() + dx, current.getY() + dy);
+				if (isValid(candidate)) {
+					Integer times = historyPath.get(candidate);
+					if (times == null || times < 4) {
+						return candidate;
+					}
+				}
+			}
+		}
+		return null; // Không tìm thấy vị trí phù hợp
 	}
 
 	private void limitVelocity(int dimension) {
@@ -180,10 +210,6 @@ public class Particle {
 		this.pBest = new Vector(pBest);
 	}
 
-	public Vector getgBest() {
-		return gBest;
-	}
-
 	public Vector getPosition() {
 		return position;
 	}
@@ -193,7 +219,7 @@ public class Particle {
 	}
 
 	public boolean isGoal() {
-		return path.get(path.size() - 1).equals(MazeConfig.EXIT);
+		return path.getLast().equals(MazeConfig.EXIT);
 	}
 
 	public List<Point> path() {
